fix hidden tooltip (z-index over 9000!!!)
Thanks
https://www.freecodecamp.org/news/4-reasons-your-z-index-isnt-working-and-how-to-fix-it-coder-coder-6bc05f103e6c/
(Alternative Solution)

--- a/css/base.css
+++ b/css/base.css
@@ -2,19 +2,21 @@
     display: none!important;
 }
 
-.tooltip {
-    position: relative;
-}
+
+/* Don't even try hiding my tooltip <https://stackoverflow.com/questions/491052/minimum-and-maximum-value-of-z-index> */
 
 .tooltip .tooltiptext {
     visibility: hidden;
     color: #fff;
     text-align: center;
     width: 100%!important;
+    padding-right: 10px!important;
     /* Position the tooltip */
     position: absolute;
+    z-index: 16777271!important;
 }
 
 .tooltip:hover .tooltiptext {
     visibility: visible;
+    z-index: 16777271!important;
 }
